--- a/blogs/tec/2021/2101.md
+++ b/blogs/tec/2021/2101.md
@@ -1,10 +1,10 @@
 ---
 title: JS代码判断移动端和PC端
-cover: https://pan.zealsay.com/zealsay/cover/4.jpg
-date: 2021-06-07
+cover: https://img-blog.csdnimg.cn/a3e86b556089402c948bc0bf04d9d327.jpg?x-oss-process=image/watermark,type_ZHJvaWRzYW5zZmFsbGJhY2s,shadow_50,text_Q1NETiBAPGRpdiBjbGFzcz0n6b6Z5a6d5a6dJz4=,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center
+date: 2021-06-30
 tags:
   - JS
-  - 移动端
+  - Phone
 categories:
   - 技术笔记
 ---
