--- a/blogs/tec/2021/2103.md
+++ b/blogs/tec/2021/2103.md
@@ -3,8 +3,7 @@ title: MarkDown文档的编写技巧
 cover: https://img-blog.csdnimg.cn/2b26ff7136c24a91abb93c8164f0521d.jpg?x-oss-process=image/watermark,type_ZHJvaWRzYW5zZmFsbGJhY2s,shadow_50,text_Q1NETiBAPGRpdiBjbGFzcz0n6b6Z5a6d5a6dJz4=,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center
 date: 2021-06-07
 tags:
-  - GitHub
-  - 代码托管
+  - MarkDown
 categories:
   - 技术笔记
 ---
